--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,6 @@
     <groupId>GitSample</groupId>
     <artifactId>GitSample</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+<!-- this is documentation-->
     
 </project>
