--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,7 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>22.0</version>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
