--- a/mvn_hw/pom.xml
+++ b/mvn_hw/pom.xml
@@ -14,6 +14,14 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>23.6-jre</version>
+    </dependency>
+
+
   </dependencies>
   <build>
     <finalName>mvn_hw</finalName>
