--- a/mvn_hw/pom.xml
+++ b/mvn_hw/pom.xml
@@ -19,6 +19,7 @@
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
       <version>23.6-jre</version>
+      <scope>test</scope>
     </dependency>
 
 
